Allowing concurrent requests to snapshot sandboxes (part 2). (#38)
* First step towards allowing concurrent invocations in snapshotted sandboxes.

* Minor fixes after some testing (part 1 of N).

* Minor fixes after some testing (part 2 of N).

* Minor fixes after some testing (part 3 of N).

* Adding concurrent request hydra test.

* Minor fixes after some testing (part 2 of N).

* Minor fixes after some testing (part 2 of N).